fix: bug width stucking shift when press by mouse

--- a/src/scss/_field.scss
+++ b/src/scss/_field.scss
@@ -11,7 +11,7 @@ body {
   flex-grow: 1;
   flex-shrink: 1;
   background-color: #464646;
-  .header__description {
+  .header__p {
     color: #ffffff;
   }
 }
